two way data binding

--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
                   <p>Vient ensuite le code à proprement parlé de votre composant, représenté par une classe :</p>
                 </div>
               </div>
+                            <div class="ibox">
+                <div class="ibox-title">
+                  <h5>Two Way Data Binding</h5>
+                </div>
+                <div class="ibox-content">
+                  <p>Il a fait la magie et le succès d'Angular 1 : le two-way data binding ! Cela signifie que si vous modifiez le modèle, la vue sera affectée, et que si vous modifiez la vue, le modèle sera affecté.</p>
+                  <p>Il s'effectue grâce à l'attribut <strong>[(ngModel)]</strong> qui rassemble un binding de propriété (votre variable) et un binding d'évenement (ici, le changement de valeur de l'input) </p>
+                  <iframe src="https://embed.plnkr.co/5B0GJCPe1P40px9BHJnY/?show=hello_world.ts,preview" frameborder="0" width="100%"
+  height="480px"></iframe>
+                </div>
+              </div>
             </div>
           </div>
           <div class="separator"></div>
