--- a/index.html
+++ b/index.html
@@ -147,6 +147,17 @@
                   <p>Vient ensuite le code à proprement parlé de votre composant, représenté par une classe :</p>
                 </div>
               </div>
+              <div class="ibox">
+                <div class="ibox-title">
+                  <h5>Data Binding de base</h5>
+                </div>
+                <div class="ibox-content">
+                  <p>Tout comme React, Angular peut effectuer des liens entre son modèle et ses vues. Cela s'appelle des binding</p>
+                  <p>Commençons avec la forme le plus simple : afficher une variable du modèle dans la vue.</p>
+<iframe src="https://embed.plnkr.co/zdC5CWDgJmMKbGDaIJjB/show=hello_world.ts,preview" frameborder="0" width="100%"
+  height="480px"></iframe>
+              </div>
+            </div>
                             <div class="ibox">
                 <div class="ibox-title">
                   <h5>Two Way Data Binding</h5>
