--- a/index.html
+++ b/index.html
@@ -27,20 +27,24 @@
         </li>
         <li>
           <a href="#accueil">
-            <i class="fa fa-compass"></i>
+            <i class="fa fa-home"></i>
             <span class="nav-label">Accueil</span>
           </a>
         </li>
         <li>
           <a href="#prerequis">
-            <i class="fa fa-compass"></i>
+            <i class="fa fa-book"></i>
             <span class="nav-label">Prérequis</span>
           </a>
         </li>
         <li>
-          <a href="#tutoriel">
-            <i class="fa fa-compass"></i>
-            <span class="nav-label">Tutoriels</span>
+          <a href="#installation">
+            <i class="fa fa-cog"></i>
+            <span class="nav-label">Installation</span>
+          </a>
+          <a href="#create">
+            <i class="fa fa-plus-circle"></i>
+            <span class="nav-label">Créer une application</span>
           </a>
         </li>
       </ul>
@@ -86,7 +90,7 @@
               <img src="angularLogo.png" class="img-header">
             </div>
             <div class="wrapper wrapper-content">
-              <div class="ibox">
+              <div class="ibox" id="installation">
                 <div class="ibox-title">
                   <h5>Installation</h5>
                 </div>
@@ -96,7 +100,7 @@
                   Cette commande permet d'installer la CLI (Command-line Interface) d'Angular. Grâce à elle, nous pourrons créer facilement une application Angular, des squelettes de fichiers...
                 </div>
               </div>
-              <div class="ibox">
+              <div class="ibox" id="create">
                 <div class="ibox-title">
                   <h5>Création d'une application</h5>
                 </div>
