--- a/index.html
+++ b/index.html
@@ -173,6 +173,17 @@
   height="480px"></iframe>
                 </div>
               </div>
+                <div class="ibox">
+                <div class="ibox-title">
+                  <h5>Première directive : ngFor</h5>
+                </div>
+                <div class="ibox-content">
+                  <p>Angular2 vous permet d'afficher des tableaux et autres liste de façon très simple, en utilisant une <strong>directive</strong>. Pour boucler sur une liste ou un tableau, il faut utiliser <strong>*ngFor</strong>.</p>
+                  <p>La petite étoile correspond à un raccourci syntaxique, pour ne pas avoir à taper la vraie directive, beaucoup plus longue.</p>
+                  <iframe src="https://embed.plnkr.co/1xKAJ6iEKwITkYQKmpJc/?show=hello_world.ts,preview" frameborder="0" width="100%"
+  height="480px"></iframe>
+                </div>
+              </div>
             </div>
           </div>
           <div class="separator"></div>
